feat: Add complete app architecture with settings, auth, and content preferences
- Implement clean architecture with core, features, and shared layers
- Add authentication flow with onboarding, login, and signup screens
- Add settings screen with notification preferences, data management, and account section
- Add content preferences with creative style selection and mature content toggle
- Add Mirror, Chat, History, and Dashboard screens with navigation shell
- Update app icons with custom Apothy logo
- Configure iOS build settings and entitlements

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,28 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<!-- =================================================================== -->
+	<!-- GOOGLE SIGN-IN CONFIGURATION - PLACEHOLDER VALUES                   -->
+	<!-- Replace YOUR_IOS_CLIENT_ID with actual value from Google Console    -->
+	<!-- =================================================================== -->
+
+	<!-- Google Sign-In Client ID (from GoogleService-Info.plist CLIENT_ID) -->
+	<key>GIDClientID</key>
+	<string>YOUR_IOS_CLIENT_ID.apps.googleusercontent.com</string>
+
+	<!-- URL Schemes for OAuth callbacks -->
+	<key>CFBundleURLTypes</key>
+	<array>
+		<!-- Google Sign-In URL Scheme (REVERSED_CLIENT_ID from GoogleService-Info.plist) -->
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.YOUR_IOS_CLIENT_ID</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
