feat: Implement Apple HIG typography and design improvements
- Use CupertinoSystemDisplay/CupertinoSystemText fonts on iOS for proper SF Pro rendering
- Update typography to exact Apple HIG sizes (34pt Large Title, 17pt Body, etc.)
- Use Flutter's official Cupertino letter spacing values for accurate text rendering
- Add iOS-style tab bar with blur effect and Cupertino icons
- Implement haptic feedback service for buttons, toggles, and tab changes
- Ensure 44pt minimum touch targets on all interactive elements
- Add speech recognition feature and assets

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,6 +47,14 @@
 	<true/>
 
 	<!-- =================================================================== -->
+	<!-- SPEECH RECOGNITION PERMISSIONS                                       -->
+	<!-- =================================================================== -->
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Apothy uses speech recognition to let you speak your thoughts instead of typing. Your voice is processed on-device for privacy.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Apothy needs microphone access to hear your voice when you use speech-to-text.</string>
+
+	<!-- =================================================================== -->
 	<!-- GOOGLE SIGN-IN CONFIGURATION - PLACEHOLDER VALUES                   -->
 	<!-- Replace YOUR_IOS_CLIENT_ID with actual value from Google Console    -->
 	<!-- =================================================================== -->
