feat: Add emotion challenge, dashboard gamification, and notifications
Emotion Challenge System:
- Complete 4-phase emotion tracking flow (cognitive reframe, somatic scan, breathing, reflection)
- 16 emotions from Plutchik's wheel with unique experiences per emotion
- Body mapping with interactive touch points and sensation tracking
- Session history with list and detail views
- Hive-based local persistence

Dashboard Gamification:
- XP system with level progression (100 XP per level)
- Daily streak tracking with freeze mechanic
- Achievement system (10 achievements: First Steps, Streak Master, etc.)
- Real-time stats display with circular progress indicators
- Confetti animations for achievements and level ups
- Integration with chat (XP for messages/responses) and emotion challenges

Notification System:
- Local notification service with permission handling
- Integrated into onboarding flow (page 4: notification permissions)
- Daily reminder scheduling at 9 PM
- Achievement unlock notifications

UI Enhancements:
- Avatar glow animation on chat screen using avatar_glow package
- Improved visual feedback and polish

iOS Configuration:
- Export compliance declaration (ITSAppUsesNonExemptEncryption)
- Notification permissions setup in AppDelegate
- Google Services configuration placeholder

Dependencies:
- hive: ^2.2.3 (local storage)
- hive_flutter: ^1.1.0
- flutter_local_notifications: ^18.0.1
- avatar_glow: ^2.0.2
- confetti: ^0.7.0
- percent_indicator: ^4.2.3

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,6 +55,13 @@
 	<string>Apothy needs microphone access to hear your voice when you use speech-to-text.</string>
 
 	<!-- =================================================================== -->
+	<!-- EXPORT COMPLIANCE                                                   -->
+	<!-- App uses standard HTTPS only (exempt encryption)                    -->
+	<!-- =================================================================== -->
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+
+	<!-- =================================================================== -->
 	<!-- GOOGLE SIGN-IN CONFIGURATION - PLACEHOLDER VALUES                   -->
 	<!-- Replace YOUR_IOS_CLIENT_ID with actual value from Google Console    -->
 	<!-- =================================================================== -->
