--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
   cached_network_image: ^3.4.1
+  avatar_glow: ^3.0.1
+  percent_indicator: ^4.2.5
+  confetti: ^0.8.0
 
   # Utilities
   intl: ^0.19.0
@@ -72,6 +75,10 @@ dependencies:
 
   # Speech Recognition
   speech_to_text: ^7.3.0
+
+  # Local Notifications
+  flutter_local_notifications: ^19.0.0
+  timezone: ^0.10.0
 
 dev_dependencies:
   flutter_test:
