feat: Add premium subscription system with RevenueCat integration
Implement comprehensive subscription management with three tiers (Free, Plus, Pro),
in-app purchases via RevenueCat, and feature gating infrastructure.

## Features Added

### Core Subscription System
- RevenueCat SDK integration with environment variable configuration
- Three subscription tiers: Free, Plus, Pro
- Subscription entity with status tracking (active, expired, cancelled, trial, grace period)
- Local caching with 1-hour TTL to reduce API calls
- Purchase flow with error handling and restore purchases support

### Domain Layer
- Subscription entity with convenience getters (isPremium, isPro, isExpired, daysUntilExpiration)
- SubscriptionTier enum (free, plus, pro)
- SubscriptionStatus enum with 5 states
- Repository interface with full CRUD operations

### Data Layer
- Hive models for local subscription persistence (type IDs 40-42)
- Repository implementation with RevenueCat CustomerInfo parsing
- Local datasource with adapter registration
- Backend sync placeholder ready for API integration

### Presentation Layer
- Comprehensive provider system with AsyncNotifier
- PaywallScreen with dynamic offering display
- SubscriptionCard widget for tier visualization
- Feature-specific paywall messaging
- Loading states and error handling

### Feature Gating Infrastructure
- canStartChallenge() method in emotion challenge repository
- Free tier: 5 emotion challenges per month
- Premium tier: unlimited challenges
- Infrastructure ready for chat XP and achievement gating

### User Entity Updates
- Added subscription fields to User entity (backwards compatible with defaults)
- JSON serialization for subscription_tier, subscription_expires_at, is_subscription_active
- User.isPremium and User.isPro convenience getters

### Localization
- Added 17 subscription-related strings to app_en.arb
- Strings for tiers, status, buttons, and messages

### Error Handling
- SubscriptionFailure class with 9 factory meth

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -65,7 +67,7 @@ dependencies:
   confetti: ^0.8.0
 
   # Utilities
-  intl: ^0.19.0
+  intl: ^0.20.2
   uuid: ^4.5.1
   equatable: ^2.0.7
   json_annotation: ^4.9.0
@@ -79,6 +81,9 @@ dependencies:
   # Local Notifications
   flutter_local_notifications: ^19.0.0
   timezone: ^0.10.0
+
+  # In-App Purchases & Subscriptions
+  purchases_flutter: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -102,6 +107,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
