test: Add comprehensive unit tests for AuthRepository
Implement complete test coverage for AuthRepository with 27 test cases
across 8 test groups. Uses mocktail for mocking dependencies.

**Testing Infrastructure:**
- Added mocktail ^1.0.4 dependency for mocking
- Created test/unit/repositories/ directory structure
- Added test/README.md with testing guidelines and best practices

**Test Coverage:**

AuthRepository Tests (test/unit/repositories/auth_repository_test.dart):

1. signInWithEmail (5 tests):
   - Successful sign in returns AuthState with user and tokens
   - Empty email validation returns ValidationFailure
   - Empty password validation returns ValidationFailure
   - Invalid credentials return AuthFailure with 'unauthorized' code
   - Network errors return AuthFailure

2. signUpWithEmail (6 tests):
   - Successful sign up returns AuthState
   - Invalid email format returns ValidationFailure
   - Weak password (< 8 chars) returns ValidationFailure
   - Password without number returns ValidationFailure
   - Password without special character returns ValidationFailure
   - Duplicate account returns AuthFailure with 'conflict' code

3. sendPasswordResetCode (3 tests):
   - Successful code send returns Unit
   - Invalid email format returns ValidationFailure
   - Remote datasource failure returns AuthFailure

4. verifyPasswordResetCode (4 tests):
   - Valid 6-digit code returns Unit
   - Code with wrong length returns ValidationFailure
   - Code with non-numeric characters returns ValidationFailure
   - Invalid/expired code returns AuthFailure

5. resetPassword (2 tests):
   - Valid password reset returns Unit
   - Weak password returns ValidationFailure

6. getCurrentUser (3 tests):
   - No stored user/tokens returns null
   - Valid user and tokens return AuthState
   - Empty tokens return null

7. signOut (2 tests):
   - Successful sign out clears local data
   - Sign out clears local data even if remote call fails

**Implementation Details:**

Mocking Strat

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
 
+  # Testing
+  mocktail: ^1.0.4
+
   # Code Generation
   build_runner: ^2.4.13
   riverpod_generator: ^2.4.0
