Fixed errors and Authentication

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,5 +39,20 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      
+      # Enable Swift concurrency
+      config.build_settings['SWIFT_VERSION'] = '5.0'
+      
+      # Ensure proper architecture settings
+      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64' if config.build_settings['EFFECTIVE_PLATFORM_NAME'] == '-iphonesimulator'
+    end
+  end
+  
+  # Set for Pods project itself
+  installer.pods_project.build_configurations.each do |config|
+    config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
   end
 end
