--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: apothy
 description: "Apothy AI Companion App"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -83,7 +83,7 @@ dependencies:
   timezone: ^0.10.0
 
   # In-App Purchases & Subscriptions
-  purchases_flutter: ^6.0.0
+  purchases_flutter: ^9.10.0
 
 dev_dependencies:
   flutter_test:
